[project]
name = "pylesk_Cownex"
version = "0.0.1"
authors = [
  { name="Cownex", email="contact@cownex.de" },
]
description = "Python wrapper for the Plesk API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Cownex/pylesk"
"Bug Tracker" = "https://github.com/Cownex/pylesk/issues"